<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.ihavenodomain.hseremoteaccelerometer.ui.activities.ActivitySettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textSize="30sp"
            android:layout_margin="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/connection_settings"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textColor="@color/trueBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:clickable="true"
            android:id="@+id/llUserName"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/user_name"
                android:textColor="@color/trueBlack"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvUserName"
                android:text="mobile"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/llPassword"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/password"
                android:textColor="@color/trueBlack"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvUserPassword"
                android:text="mobile"
                android:inputType="textPassword"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/llDbName"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/database_name"
                android:textColor="@color/trueBlack"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvDbName"
                android:text="gendata"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/llIpAddress"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/ip_address_port"
                android:textColor="@color/trueBlack"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvIpAddress"
                android:text="35.161.181.63:8086"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/llSendIntervals"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/intervals_of_data_sending"
                android:textColor="@color/trueBlack"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvSendIntervals"
                android:text="1 sec"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:clickable="true"
            android:id="@+id/btnRestoreDefault"
            android:layout_gravity="center_horizontal"
            android:text="@string/restore_defaults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>