<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/accelerometer_graph"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textColor="@color/trueBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.jjoe64.graphview.GraphView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/graphAcc" />

        <TextView
            android:text="@string/gyroscope_graph"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textColor="@color/trueBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.jjoe64.graphview.GraphView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/graphGyro" />

        <TextView
            android:id="@+id/tvSendIntervals"
            android:text="@string/intervals_of_data_sending"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textColor="@color/trueBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>