<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSettingName"
        android:text="Setting Name"
        android:textColor="@color/trueBlack"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etValue"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/seekBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:max="60"
        android:progress="1" />

    <!--Вставить кнопки-->

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDialogCancel"
            android:clickable="true"
            android:layout_margin="16dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDialogOk"
            android:clickable="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>